# quic-interop-runner

./: .env.sh  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  collect_plots.py  compare_measurements.py  compare_results.py  conf.py  config.yml  custom_types.py  deployment.py  docker-compose.yml  docker_hosts.yml  docker_utils.py  enums.py  exceptions.py  fsck.py  gather_results.py  implementations.json  implementations.py  interop.py  long_term_evaluation.py  plot_all.py  plot_diagram.py  plot_pairplot.py  plot_plts.py  plot_real_experiments.py  plot_stats.py  plot_stats.sh  post_process_logs.py  pull.py  pylintrc  pyproject.toml  real_link_setup.sh  result_json_types.py  result_parser.py  run.py  run_sat_test.py  (+10 more)
.github/workflows/: aggregate.py
web/: index.html  script.js  styles.css
