[tool.poetry]
name = "quic-interop-runner"
version = "0.1.0"
description = ""
authors = ["Jana Iyengar", "Marten Seemann", "sedrubal <dev@sedrubal.de>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Jinja2 = "^3.0.1"
humanize = "^3.11.0"
matplotlib = "^3.4.3"
nest-asyncio = "^1.5.1"
numpy = "^1.21.2"
prettytable = "^2.2.1"
prompt-toolkit = "^3.0.19"
pycryptodome = "^3.11.0"
pyshark = "^0.4.3"
requests = "^2.26.0"
termcolor = "^1.1.0"
urllib3 = "^1.26.7"
yaspin = "^2.1.0"
docker = "^5.0.3"
paramiko = "^2.8.0"
SQLAlchemy = "^1.4.26"
SQLAlchemy-Utils = "^0.37.9"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
mypy = "^0.910"
black = "^20.8b1"
data-science-types = "^0.2.22"
pre-commit = "^2.9.3"
ipython = "^7.27.0"
ipdb = "^0.13.9"
rope = "^0.20.1"
types-python-dateutil = "^2.8.0"
types-requests = "^2.25.9"
types-paramiko = "^2.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
